--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </div>
                 <div class="about-image">
                     <div class="image-container">
-                        <img src="images/Kamran.jpeg" alt="Kamran Bagwan" class="profile-img">
+                        <img src="images/kamran.jpeg" alt="Kamran Bagwan" class="profile-img">
                         <div class="image-overlay"></div>
                     </div>
                 </div>
